<resources>
    <!--adds-->
    <string name="addsAppId">ca-app-pub-4034117723237587~9792433889</string>
    <!--testing-->
    <string name="bannerAddUnitId">ca-app-pub-3940256099942544/6300978111</string>
    <!--<string name="InterstitialAddUnitId">ca-app-pub-4034117723237587/4902251046</string>-->

    <!--real-->
    <!--<string name="bannerAddUnitId">ca-app-pub-4034117723237587/9042458990</string>
    <string name="InterstitialAddUnitId">ca-app-pub-4034117723237587/4902251046</string>-->

    <string name="app_name">FitTunner</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="start">Start</string>
    <string name="title_activity_map_tracking">Map</string>
    <string name="in_kcal">In kcal</string>
    <string name="in_kilometre">In kilometre</string>
    <string name="in_hours">In Hours</string>
    <string name="total_nspent_time">Total\nTime</string>
    <string name="avg_nspeed">Avg\nSpeed</string>
    <string name="total_ndistence">Total\nDistence</string>
    <string name="total_ncalories">Total\nCalories</string>
</resources>