<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp_10"
    tools:context=".view.home.ui.dashboard.DashboardFragment">

    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/pageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_extra_bold"
        android:text="@string/title_dashboard"
        android:textSize="@dimen/sp_30"
        android:layout_marginStart="@dimen/dp_5"/>

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@+id/pageTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:weightSum="2.5"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="2">
            <androidx.cardview.widget.CardView
                style="@style/dashboardCardStyle">
                <LinearLayout
                    style="@style/dashboardCardSubViewStyle">
                    <ImageView
                        android:src="@drawable/ic_run"
                        style="@style/dashboardIons"/>
                    <TextView
                        android:text="@string/total_ndistence"
                        style="@style/dashboardMenuHeader"/>
                    <TextView
                        android:id="@+id/tvTotalDistence"
                        style="@style/dashboardMenuData"/>

                    <TextView
                        android:text="@string/in_kilometre"
                        style="@style/dashboardMenuSecondaryLable"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                style="@style/dashboardCardStyle">
                <LinearLayout
                    style="@style/dashboardCardSubViewStyle">
                    <ImageView
                        android:src="@drawable/ic_fat_burn"
                        style="@style/dashboardIons"/>
                    <TextView
                        android:text="@string/total_ncalories"
                        style="@style/dashboardMenuHeader"/>
                    <TextView
                        android:id="@+id/tvTotalCalories"
                        style="@style/dashboardMenuData"/>

                    <TextView
                        android:text="@string/in_kcal"
                        style="@style/dashboardMenuSecondaryLable"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="2">
            <androidx.cardview.widget.CardView
                style="@style/dashboardCardStyle">
                <LinearLayout
                    style="@style/dashboardCardSubViewStyle">
                    <ImageView
                        android:src="@drawable/ic_sropwatch"
                        style="@style/dashboardIons"/>
                    <TextView
                        android:text="@string/total_nspent_time"
                        style="@style/dashboardMenuHeader"/>

                    <TextView
                        android:id="@+id/tvTotalTime"
                        style="@style/dashboardMenuData" />

                    <TextView
                        android:text="@string/in_hours"
                        style="@style/dashboardMenuSecondaryLable"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                style="@style/dashboardCardStyle">
                <LinearLayout
                    style="@style/dashboardCardSubViewStyle">
                    <ImageView
                        android:src="@drawable/ic_speed"
                        style="@style/dashboardIons"/>
                    <TextView
                        android:text="@string/avg_nspeed"
                        style="@style/dashboardMenuHeader"
                        />
                    <TextView
                        android:id="@+id/tvAverageSpeed"
                        style="@style/dashboardMenuData"/>

                    <TextView
                        android:text="In kmph"
                        style="@style/dashboardMenuSecondaryLable" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>